--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 datasets/.DS_Store
 datasets/arnold/.DS_Store
+tutorial/.ipynb_checkpoints/kg-network-analysis-checkpoint.ipynb
+tutorial/.ipynb_checkpoints/kg-profiling-checkpoint.ipynb
