--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ datasets/.DS_Store
 datasets/arnold/.DS_Store
 tutorial/.ipynb_checkpoints/kg-network-analysis-checkpoint.ipynb
 tutorial/.ipynb_checkpoints/kg-profiling-checkpoint.ipynb
+datasets/imdb/.DS_Store
