imdb part of the augment tutorial

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ datasets/arnold/.DS_Store
 tutorial/.ipynb_checkpoints/kg-network-analysis-checkpoint.ipynb
 tutorial/.ipynb_checkpoints/kg-profiling-checkpoint.ipynb
 datasets/imdb/.DS_Store
+tutorial/.ipynb_checkpoints/cache-bug-checkpoint.ipynb
+tutorial/.ipynb_checkpoints/kg-augment-checkpoint.ipynb
