--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-
+.DS_Store
+tutorial/.ipynb_checkpoints/
+datasets/getty/gzip_me.sh
 datasets/.DS_Store
 datasets/arnold/.DS_Store
 tutorial/.ipynb_checkpoints/kg-network-analysis-checkpoint.ipynb
