ignore extra files json

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ datasets/arnold/.DS_Store
 tutorial/.ipynb_checkpoints/kg-network-analysis-checkpoint.ipynb
 tutorial/.ipynb_checkpoints/kg-profiling-checkpoint.ipynb
 datasets/imdb/.DS_Store
+tutorial/extra_files.json
 tutorial/.ipynb_checkpoints/cache-bug-checkpoint.ipynb
 tutorial/.ipynb_checkpoints/kg-augment-checkpoint.ipynb
