Updated gitignore to avoid uploading projects folder

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ datasets/imdb/.DS_Store
 tutorial/extra_files.json
 tutorial/.ipynb_checkpoints/cache-bug-checkpoint.ipynb
 tutorial/.ipynb_checkpoints/kg-augment-checkpoint.ipynb
+projects/*
