--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ tutorial/.ipynb_checkpoints/kg-augment-checkpoint.ipynb
 projects/*
 use-cases/.ipynb_checkpoints/bio-subgraphs-checkpoint.ipynb
 use-cases/.ipynb_checkpoints/p279-similarity-checkpoint.ipynb
+use-cases/.ipynb_checkpoints/browser-profiling-checkpoint.ipynb
+use-cases/.ipynb_checkpoints/ontology-examples-checkpoint.ipynb
+use-cases/.ipynb_checkpoints/properties-for-this-type-checkpoint.ipynb
